test/should-fail/vsgc1659.f3
/**
 * Regression test for VSGC-1659 : Crash in attribution for variable declaration within an expression
 *
 * @test/fail
 */

var x;
x = (def y = 8)
